--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,17 @@
 		</dependency>
 	</dependencies>
 
-	<properties>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
-	</properties>
+<properties>
+    <java.version>1.8</java.version>
+</properties>
+	
+	<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+    </configuration>
+</plugin>
 
 </project>
