--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
 <properties>
     <java.version>1.8</java.version>
 </properties>
+	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+	</properties>
 
 
 </project>
